--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "axios": "^1.6.7",
     "expo": "~50.0.4",
+    "expo-font": "~11.10.3",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-native": "0.73.2",
+    "react-native-dialog": "^9.3.0",
+    "react-native-uuid": "^2.0.1",
+    "expo-updates": "~0.24.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "reactotron-react-native": "^5.1.3"
   },
   "private": true
 }
