--- a/package.json
+++ b/package.json
@@ -9,16 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "axios": "^1.6.7",
+    "babel-preset-expo": "^54.0.10",
     "expo": "~50.0.4",
     "expo-font": "~11.10.3",
     "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.11",
+    "nativewind": "^4.2.1",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.73.2",
     "react-native-dialog": "^9.3.0",
+    "react-native-reanimated": "^4.2.2",
+    "react-native-safe-area-context": "^5.6.2",
     "react-native-uuid": "^2.0.1",
-    "expo-updates": "~0.24.11"
+    "react-native-web": "~0.19.6",
+    "tailwindcss": "^3.4.19",
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
