--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-safe-area-context": "^5.6.2",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.19.6",
+    "sweetalert2": "^11.26.18",
     "tailwindcss": "^3.4.19",
     "typescript": "^5.3.0"
   },
