--- a/package.json
+++ b/package.json
@@ -4,29 +4,29 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.1.3",
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@expo/metro-runtime": "~6.1.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "axios": "^1.6.7",
     "babel-preset-expo": "^54.0.10",
-    "expo": "~50.0.4",
-    "expo-font": "~11.10.3",
-    "expo-status-bar": "~1.11.1",
-    "expo-updates": "~0.24.11",
+    "expo": "~54.0.33",
+    "expo-font": "~14.0.11",
+    "expo-status-bar": "~3.0.9",
+    "expo-updates": "~29.0.16",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.73.2",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-dialog": "^9.3.0",
-    "react-native-reanimated": "^4.2.2",
-    "react-native-safe-area-context": "^5.6.2",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "~0.19.6",
+    "react-native-web": "^0.21.0",
     "sweetalert2": "^11.26.18",
     "tailwindcss": "^3.4.19",
     "typescript": "^5.3.0"
